fix вертикальной прокрутки блока, теперь wrap overflow:hidden

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -59,7 +59,7 @@ a {
 }
 
 .wrap {
-  overflow-x: hidden;
+  overflow: hidden;
   max-width: 1440px;
   // width: 100%;
   padding-left: 87px;
